@@ -9,6 +9,7 @@
 * Robokassa: Fix signature for empty amount [ukolovda]
 * Worldpay gateway: Fix error messages for some failures [duff]
 * Worldpay gateway: Allow settled payments to be refunded [dougal]
+* Spreedly: Update urls and terminology [duff]
 
 == Version 1.31.1 (February 25, 2013)
 
